<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/changeColorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_color" />

    <View
        android:id="@+id/simpleView"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <Button
        android:layout_marginTop="50dp"
        android:id="@+id/forwardNavBtn"
        android:layout_width="wrap_content"
        android:text="@string/directon"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="50dp"
        android:id="@+id/listNavBtn"
        android:layout_width="wrap_content"
        android:text="@string/nav_to_list"
        android:layout_height="wrap_content" />
</LinearLayout>