<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/counterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textSize="22sp"
        tools:text="dasdsa" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/changeColorFBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_color" />

        <View
            android:id="@+id/simpleFView"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/backNavBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/directon_another" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/changeColorSBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_color" />

        <View
            android:id="@+id/simpleSView"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/forwardNavBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/to_another_fragment" />
    </LinearLayout>
</LinearLayout>
